test_suite/tests/ui/float/derive/ord_without_partial_ord.rs
use nutype::nutype;

#[nutype(
    validate(finite),
    derive(PartialEq, Eq, Ord)
)]
pub struct Size(f64);

fn main() {}
